Se cambiaron colores de titulos

--- a/home.html
+++ b/home.html
@@ -168,11 +168,11 @@
             <p class="sub-title" >Soy un profesional de 24 años con un grado de Bachiller en Ingeniería de Sistemas Computacionales por la Universidad Privada del Norte. Actualmente, realizo prácticas profesionales en el Banco de la Nación, donde aplico y desarrollo mis habilidades en la programación web front-end. Mi formación académica y experiencia laboral me han permitido adquirir conocimientos sólidos y habilidades prácticas en el desarrollo de interfaces web, y cuento con certificados que avalan mi trayectoria profesional.</p>
             <div class="ctn-datos-personales">
               <div class="datos-personales">
-                <p class="dp-txt"> <span>Nombre:</span> Miguel Angel Tapia Pérez</p>
-                <p class="dp-txt"> <span>F. Nacimiento:</span>17 de Setiembre de 1999</p>
-                <p class="dp-txt"> <span>Dirección:</span> Villa el Salvador, Lima, Perú</p>
-                <p class="dp-txt"> <span>Email:</span> migueltapia1722@gmail.com</p>
-                <p class="dp-txt"> <span>Celular:</span> +51 937311762</p>
+                <p class="dp-txt"><span>Nombre:</span> Miguel Angel Tapia Pérez</p>
+                <p class="dp-txt"><span>F. Nacimiento:</span> 17 de Setiembre de 1999</p>
+                <p class="dp-txt"><span>Dirección:</span> Villa el Salvador, Lima, Perú</p>
+                <p class="dp-txt"><span>Email:</span> migueltapia1722@gmail.com</p>
+                <p class="dp-txt"><span>Celular:</span> +51 937311762</p>
               </div>
             </div>
           </div>
@@ -606,7 +606,7 @@
                     </div>
                   </div>
 
-                  <h3>OFFICE</h3>
+                  <h3>Office</h3>
 
                   <div class="skill-item">
                     <div class="skill-txt">
