se realizaron cambios en responsive

--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="stylesheet" href="css/boton.css" />
   <link rel="stylesheet" href="css/otroboton.css" />
+  <link rel="stylesheet" href="css/responsive.css" />
   <script src="js/jquery-3.7.1.js"></script>
   <title>CV - Miguel Angel Tapia Pérez</title>
 </head>
@@ -186,6 +187,30 @@
                 <h2>Educación</h2>
                 <br>
                 <div class="ctn-education">
+                  
+                  <!-- Bachiller UPN -->
+                  <div class="education-item item-profesional">
+                    <div class="item-fecha">
+                      <p class="year-title">2023 - 2024</p>
+                      <a class="year-location o-7" target="_blank" href="https://maps.app.goo.gl/ZmKVaHEGKSX4CZfz7"> Surco - Lima</a>
+                      <a target="_blank" class="btn-descarga" href="doc/cursos/certus-desarrollo-web-front-end.pdf">
+                        <span>
+                          <svg style="vertical-align: middle;"  width="16" height="16" fill="white" viewBox="0 0 18 18">
+                              <path class="cls-1" d="m9,12.5l-4.38-4.38,1.23-1.27,2.27,2.27V2h1.75v7.13l2.27-2.27,1.23,1.27-4.38,4.38Zm-5.25,3.5c-.48,0-.89-.17-1.24-.51s-.51-.75-.51-1.24v-2.62h1.75v2.62h10.5v-2.62h1.75v2.62c0,.48-.17.89-.51,1.24s-.75.51-1.24.51H3.75Z"/>
+                        </svg>
+                      </span>
+                      </a>
+                    </div>
+                    <div class="item-circle">
+                      <span class="circle"></span>
+                    </div>
+                    <div class="item-info">
+                      <p class="info-title">Certus</p>
+                      <p class="info-txt ff-m">Desarrollo Web Front-End</p>
+                      <p class="info-txt">Curso - 72hrs</p>
+                    </div>
+                  </div>
+                  <!-- Fin de Bachiller UPN -->
                   
                   <!-- Bachiller UPN -->
                   <div class="education-item item-profesional">
@@ -539,20 +564,20 @@
                   <div class="skill-item">
                     <div class="skill-txt">
                       <p class="ff-m">Html5</p>
-                      <p>95%</p>
+                      <p>100%</p>
                     </div>
                     <div class="skill-barra">
-                      <p class="item-barra" style="width: 95%;"></p>
+                      <p class="item-barra" style="width: 100%;"></p>
                     </div>
                   </div>
 
                   <div class="skill-item">
                     <div class="skill-txt">
                       <p class="ff-m">Css</p>
-                      <p>95%</p>
+                      <p>100%</p>
                     </div>
                     <div class="skill-barra">
-                      <p class="item-barra" style="width: 95%;"></p>
+                      <p class="item-barra" style="width: 100%;"></p>
                     </div>
                   </div>
 
@@ -707,7 +732,14 @@
       </div>
 
     </div>
-    <!-- <div class="card"></div> -->
+    <div class="ctn-menu-responsive" style="display: none;">
+      <svg class="svg-menu" height="30px" viewBox="0 -960 960 960" width="30px" fill="#e8eaed">
+        <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
+      </svg>
+      <svg class="svg-close"  height="30px" viewBox="0 -960 960 960" width="30px" fill="#e8eaed">
+        <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
+      </svg>
+    </div>
   </div>
 
   <script src="js/javascript.js"></script>
