--- a/home.html
+++ b/home.html
@@ -184,7 +184,7 @@
                   <div class="btns-ap-item btn-all">Todo</div>
                   <div class="btns-ap-item btn-pro active"> Profesional</div>
                 </div>
-                <h2>Educación</h2>
+                <h2 class="p-s">Educación</h2>
                 <br>
                 <div class="ctn-education">
                   
@@ -295,7 +295,7 @@
                 </div>
 
                 <br>
-                <h2>Experiencia Laboral</h2>
+                <h2 class="p-s">Experiencia Laboral</h2>
                 <br>
 
                 <div class="ctn-education">
@@ -559,7 +559,7 @@
               <div class="sub-ctn-right-datos">
                 
                 <div class="ctn-skills">
-                  <h3>Habilidades de codificación</h3>
+                  <h3 class="p-s">Habilidades de codificación</h3>
 
                   <div class="skill-item">
                     <div class="skill-txt">
@@ -631,7 +631,7 @@
                     </div>
                   </div>
 
-                  <h3>Office</h3>
+                  <h3 class="p-s">Office</h3>
 
                   <div class="skill-item">
                     <div class="skill-txt">
