empezando con certificados

--- a/home.html
+++ b/home.html
@@ -24,20 +24,12 @@
           <!-- <div class="perfil-txt">Front End Developer</div> -->
         </div>
         <div class="ctn-svg-redes">
-          <a class="item-redes" style="width: 25%;" href="">
+          <a class="item-redes" target="_blank" href="https://www.linkedin.com/miguelangeltapiaperez/">
             <svg viewBox="0 0 24 24" width="24" height="24" fill="white">
               <path d="M22.23 0H1.77C.792 0 0 .77 0 1.72v20.56C0 23.23.792 24 1.77 24h20.46c.978 0 1.77-.77 1.77-1.72V1.72C24 .77 23.208 0 22.23 0zM7.08 20.45H3.56V9h3.52v11.45zM5.32 7.57a2.045 2.045 0 1 1 0-4.09 2.045 2.045 0 0 1 0 4.09zm15.13 12.88h-3.52v-5.65c0-1.35-.028-3.09-1.88-3.09-1.88 0-2.17 1.47-2.17 2.98v5.76h-3.52V9h3.38v1.56h.05c.47-.89 1.61-1.82 3.32-1.82 3.55 0 4.21 2.33 4.21 5.36v6.35z"/>
             </svg>
           </a>
-  
-          <a class="item-redes" style="width: 50%;" href="">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" width="24" height="24" fill="white">
-              <path d="M128 0L256 256H0L128 0z"/>
-            </svg>
-            Vercel
-          </a>
-  
-          <a class="item-redes" style="width: 25%;" href="">
+          <a class="item-redes" target="_blank" href="https://github.com/MATP1709">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="white">
               <path d="M12 .296c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.207 11.387.6.111.82-.26.82-.577 0-.285-.01-1.04-.015-2.04-3.338.726-4.042-1.614-4.042-1.614-.546-1.386-1.334-1.756-1.334-1.756-1.09-.745.082-.729.082-.729 1.205.084 1.84 1.24 1.84 1.24 1.07 1.835 2.809 1.305 3.495.998.108-.774.419-1.305.762-1.605-2.665-.303-5.466-1.334-5.466-5.933 0-1.312.469-2.382 1.236-3.222-.123-.303-.536-1.523.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.005-.404 1.022.005 2.048.138 3.006.404 2.29-1.552 3.297-1.23 3.297-1.23.653 1.653.24 2.873.118 3.176.77.84 1.235 1.91 1.235 3.222 0 4.609-2.803 5.625-5.475 5.921.43.37.814 1.102.814 2.222 0 1.606-.015 2.899-.015 3.293 0 .32.217.694.825.576C20.565 22.092 24 17.592 24 12.296c0-6.627-5.373-12-12-12"/>
             </svg>  
@@ -167,7 +159,7 @@
             Acerca de Mí
           </div>
           <div class="ctn-subtitle">
-            <p class="sub-title" >Soy un profesional de 24 años con un grado de Bachiller en Ingeniería de Sistemas Computacionales por la Universidad Privada del Norte. Actualmente, realizo prácticas profesionales en el Banco de la Nación, donde aplico y desarrollo mis habilidades en la programación web front-end. Mi formación académica y experiencia laboral me han permitido adquirir conocimientos sólidos y habilidades prácticas en el desarrollo de interfaces web, y cuento con certificados que avalan mi trayectoria profesional.</p>
+            <p class="sub-title" >Soy un profesional de 24 años con un grado de Bachiller en Ingeniería de Sistemas Computacionales de la Universidad Privada del Norte. Actualmente, realizo prácticas profesionales en el Banco de la Nación, donde aplico y desarrollo mis habilidades de programación web front-end. Mi formación académica y experiencia laboral me han permitido adquirir conocimientos sólidos y habilidades prácticas en el desarrollo de interfaces web, y cuento con certificados que avalan mi trayectoria profesional.</p>
             <div class="ctn-datos-personales">
               <div class="datos-personales">
                 <p class="dp-txt"><span>Nombre:</span> Miguel Angel Tapia Pérez</p>
@@ -207,7 +199,7 @@
                     </div>
                     <div class="item-info">
                       <p class="info-title">Certus</p>
-                      <p class="info-txt ff-m">Desarrollo Web Front-End</p>
+                      <p class="info-txt ff-m">Desarrollo Web Front-End (React)</p>
                       <p class="info-txt">Curso - 72hrs</p>
                     </div>
                   </div>
@@ -560,7 +552,7 @@
               <div class="sub-ctn-right-datos">
                 
                 <div class="ctn-skills">
-                  <h3 class="p-s">Habilidades de codificación</h3>
+                  <h3 class="p-s">Skills</h3>
 
                   <div class="skill-item">
                     <div class="skill-txt">
@@ -689,10 +681,12 @@
             Certificados
           </div>
           <div class="sub-ctn-ambos">
-            <div class="sub-ctn-left ctn-informacion">
-                <h2>Institución</h2>
-                
-
+            <h2>Institución</h2>
+            <div class="ctn-certificados">
+              <div class="certificado-item">
+                <div class="certificado-item-img"></div>
+                <div class="certificado-item-info"></div>
+              </div>
             </div>
           </div>
         </div>
