--- a/home.html
+++ b/home.html
@@ -160,15 +160,6 @@
           </div>
           <div class="ctn-subtitle">
             <p class="sub-title" >Soy un profesional de 24 años con un grado de Bachiller en Ingeniería de Sistemas Computacionales de la Universidad Privada del Norte. Actualmente, realizo prácticas profesionales en el Banco de la Nación, donde aplico y desarrollo mis habilidades de programación web front-end. Mi formación académica y experiencia laboral me han permitido adquirir conocimientos sólidos y habilidades prácticas en el desarrollo de interfaces web, y cuento con certificados que avalan mi trayectoria profesional.</p>
-            <div class="ctn-datos-personales">
-              <div class="datos-personales">
-                <p class="dp-txt"><span>Nombre:</span> Miguel Angel Tapia Pérez</p>
-                <p class="dp-txt"><span>F. Nacimiento:</span> 17 de Setiembre de 1999</p>
-                <p class="dp-txt"><span>Dirección:</span> Villa el Salvador, Lima, Perú</p>
-                <p class="dp-txt"><span>Email:</span> migueltapia1722@gmail.com</p>
-                <p class="dp-txt"><span>Celular:</span> +51 937311762</p>
-              </div>
-            </div>
           </div>
           <div class="sub-ctn-ambos">
             <div class="ctn-descripcion-datos">
@@ -907,15 +898,52 @@
             Contacto
           </div>
           <div class="sub-ctn-ambos">
-            <div class="sub-ctn-left ctn-informacion">
-              
-            </div>
-            <div class="sub-ctn-right">
-              <div>937311762</div>
-              <div>migueltapia1722@gmail.com</div>
-              <div></div>
-              <div></div>
-              <div></div>
+            <div class="ctn-datos">
+
+              <div class="ctn-datos-item">
+                <div class="datos-item-svg">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50">
+                    <circle cx="12" cy="8" r="4" fill="var(--white)" />
+                    <path d="M12 14c-4.42 0-8 1.79-8 4v2h16v-2c0-2.21-3.58-4-8-4z" fill="var(--white)" />
+                  </svg>
+                </div>
+                <div class="datos-item-txt">
+                  <p><span>Nombre:</span> Miguel Angel Tapia Pérez</p>
+                  <p><span>F. Nacimiento:</span> 17 de Setiembre de 1999</p>
+                </div>
+              </div>
+
+              <div class="ctn-datos-item">
+                <div class="datos-item-svg">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50">
+                    <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5S10.62 6.5 12 6.5s2.5 1.12 2.5 2.5S13.38 11.5 12 11.5z" fill="var(--white)"/>
+                  </svg>
+                </div>
+                <div class="datos-item-txt">
+                  Lima, Perú
+                </div>
+              </div>
+
+              <div class="ctn-datos-item">
+                <div class="datos-item-svg">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50">
+                    <path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4-8 5-8-5V6l8 5 8-5v2z" fill="var(--white)"/>
+                  </svg>
+                </div>
+                <div class="datos-item-txt">
+                  migueltapia1722@gmail.com
+                </div>
+              </div>
+
+              <div class="ctn-datos-item">
+                <div class="datos-item-svg">
+
+                </div>
+                <div class="datos-item-txt">
+                  +51 937311762
+                </div>
+              </div>
+
             </div>
           </div>
         </div>
