agregando contenido en contacto

--- a/home.html
+++ b/home.html
@@ -3,11 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- <link rel="icon" href="/img/favicon.ico" type="image/x-icon"> -->
+  <link rel="icon" href="img/cv.png" sizes="32x32" type="image/png">
   <link rel="stylesheet" href="css/styles.css" />
-  <link rel="stylesheet" href="css/boton.css" />
-  <link rel="stylesheet" href="css/otroboton.css" />
   <link rel="stylesheet" href="css/responsive.css" />
   <script src="js/jquery-3.7.1.js"></script>
   <title>CV - Miguel Angel Tapia Pérez</title>
@@ -129,18 +128,6 @@
             <path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z"/>
           </svg>
         </a>
-        <!--<a href="#" class="btn-neon">
-                <span id="span1">
-                </span>
-                <span id="span2">
-                </span>
-                <span id="span3">
-                </span>
-                <span id="span4">
-                </span>
-                Descargar CV
-            </a> -->
-
       </div>
     </div>
 
@@ -653,19 +640,6 @@
         </div>
       </div>
 
-      <!-- <div class="contenedores" id="experiencia-content">
-        <div class="sub-contenedor">
-          <div class="sub-ctn-title">
-            Experiencia
-          </div>
-          <div class="sub-ctn-ambos">
-            <div class="sub-ctn-left ctn-informacion">
-              
-            </div>
-          </div>
-        </div>
-      </div> -->
-
       <div class="contenedores" id="certificado-content">
         <div class="sub-contenedor">
           <div class="sub-ctn-title">
@@ -899,24 +873,24 @@
           </div>
           <div class="sub-ctn-ambos">
             <div class="ctn-datos">
-
+              <h2>Datos Personales</h2>
               <div class="ctn-datos-item">
                 <div class="datos-item-svg">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50">
-                    <circle cx="12" cy="8" r="4" fill="var(--white)" />
-                    <path d="M12 14c-4.42 0-8 1.79-8 4v2h16v-2c0-2.21-3.58-4-8-4z" fill="var(--white)" />
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50" class="glow">
+                    <circle cx="12" cy="8" r="4" fill="var(--blue-two)" />
+                    <path d="M12 14c-4.42 0-8 1.79-8 4v2h16v-2c0-2.21-3.58-4-8-4z" fill="var(--blue-two)" />
                   </svg>
                 </div>
                 <div class="datos-item-txt">
-                  <p><span>Nombre:</span> Miguel Angel Tapia Pérez</p>
-                  <p><span>F. Nacimiento:</span> 17 de Setiembre de 1999</p>
+                  <p>Miguel Angel Tapia Pérez</p>
+                  <p>25 años</p>
                 </div>
               </div>
 
               <div class="ctn-datos-item">
                 <div class="datos-item-svg">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50">
-                    <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5S10.62 6.5 12 6.5s2.5 1.12 2.5 2.5S13.38 11.5 12 11.5z" fill="var(--white)"/>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50" class="glow">
+                    <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5S10.62 6.5 12 6.5s2.5 1.12 2.5 2.5S13.38 11.5 12 11.5z" fill="var(--blue-two)"/>
                   </svg>
                 </div>
                 <div class="datos-item-txt">
@@ -926,8 +900,8 @@
 
               <div class="ctn-datos-item">
                 <div class="datos-item-svg">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50">
-                    <path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4-8 5-8-5V6l8 5 8-5v2z" fill="var(--white)"/>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50" class="glow">
+                    <path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4-8 5-8-5V6l8 5 8-5v2z" fill="var(--blue-two)"/>
                   </svg>
                 </div>
                 <div class="datos-item-txt">
@@ -937,7 +911,9 @@
 
               <div class="ctn-datos-item">
                 <div class="datos-item-svg">
-
+                  <svg width="50" height="50" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="glow">
+                    <path d="M6.62 10.79C8.06 13.91 10.09 15.94 13.21 17.38L15.27 15.32C15.61 14.98 16.11 14.86 16.54 15C17.69 15.35 18.93 15.53 20.19 15.53C20.71 15.53 21.15 15.97 21.15 16.49V20.19C21.15 20.71 20.71 21.15 20.19 21.15C10.35 21.15 2.85 13.65 2.85 3.81C2.85 3.29 3.29 2.85 3.81 2.85H7.51C8.03 2.85 8.47 3.29 8.47 3.81C8.47 5.07 8.65 6.31 9 7.46C9.14 7.89 9.02 8.39 8.68 8.73L6.62 10.79Z" fill="var(--blue-two)"/>
+                  </svg>                  
                 </div>
                 <div class="datos-item-txt">
                   +51 937311762
@@ -945,6 +921,15 @@
               </div>
 
             </div>
+            <div class="contact-form">
+              <h2>Contactame</h2>
+              <form id="contact-form">
+                <input type="text" id="name" name="name" placeholder="Nombre" required>
+                <input type="email" id="email" name="email" placeholder="Correo Electronico" required>
+                <textarea id="message" name="message" placeholder="Mensaje" rows="4" required></textarea>
+                <button type="submit">Enviar</button>
+              </form>
+            </div>          
           </div>
         </div>
       </div>
