se subio imagen de sombra para inicio

--- a/home.html
+++ b/home.html
@@ -869,7 +869,7 @@
                 </div>
                 <div class="datos-item-txt">
                   <p>Miguel Angel Tapia Pérez</p>
-                  <p>25 años</p>
+                  <!-- <p>25 años</p> -->
                 </div>
               </div>
 
