--- a/home.html
+++ b/home.html
@@ -121,6 +121,10 @@
 
       <div class="contenedores" id="inicio-content">
         <div class="ctn-inicio">
+          <video class="video-background" autoplay muted loop>
+            <source src="video/video-txt.mp4" type="video/mp4">
+            Tu navegador no soporta el elemento de video.
+          </video>
           <h1>Miguel Tapia</h1>
           <p>Front End Developer</p>
         </div>
