--- a/home.html
+++ b/home.html
@@ -844,8 +844,14 @@
           </div>
           <div class="sub-ctn-ambos">
             <div class="sub-ctn-left ctn-informacion">
-            </div>
-            <div class="sub-ctn-right">
+              <div class="ctn-portafolio">
+                <div class="portafolio-item">
+                  <div class="items-img">
+                    <img src="img/portafolio/banco-de-la-nacion.png" alt="web responsive del Banco de la Nación">
+                  </div>
+                  <div class="items-txt"> Página Web del Banco de la Nación</div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
