se actualizo el correo y pdf

--- a/home.html
+++ b/home.html
@@ -896,7 +896,7 @@
                   </svg>
                 </div>
                 <div class="datos-item-txt">
-                  tapiavirgo44@gmail.com
+                  migueltapia1722@gmail.com
                 </div>
               </div>
 
