cambios en portafolio

--- a/home.html
+++ b/home.html
@@ -117,7 +117,6 @@
     </div>
 
     <div class="ctn-info">
-
       <div class="contenedores" id="inicio-content">
         <div class="ctn-inicio">
           <h1>Miguel Tapia</h1>
@@ -845,12 +844,17 @@
           <div class="sub-ctn-ambos">
             <div class="sub-ctn-left ctn-informacion">
               <div class="ctn-portafolio">
-                <div class="portafolio-item">
+
+                <a class="portafolio-item" target="_blank" href="https://www.bn.com.pe/">
                   <div class="items-img">
                     <img src="img/portafolio/banco-de-la-nacion.png" alt="web responsive del Banco de la Nación">
                   </div>
-                  <div class="items-txt"> Página Web del Banco de la Nación</div>
-                </div>
+                  <div class="items-txt">
+                    <p class="items-txt-title">Banco de la Nación</p>
+                    <p class="items-txt-descrip">Diseño y desarrollo de la nueva página web del Banco de la Nación con el uso de: HTML5, CSS, JS (Jquery), ASP.</p>
+                  </div>
+                </a>
+                
               </div>
             </div>
           </div>
@@ -939,6 +943,7 @@
       </div>
 
     </div>
+
     <div class="ctn-menu-responsive" style="display: none;">
       <svg class="svg-menu" height="30px" viewBox="0 -960 960 960" width="30px" fill="#e8eaed">
         <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
