se actualizarón documentos

--- a/home.html
+++ b/home.html
@@ -258,10 +258,17 @@
                   <!-- Banco de la Nación -->
                   <div class="education-item item-profesional">
                     <div class="item-fecha">
-                      <p class="year-title">17/10/23 - Actualmente</p>
+                      <p class="year-title">17/10/23 al 16/10/24</p>
                       <a class="year-location o-7" target="_blank" style="text-decoration: underline;" href="https://maps.app.goo.gl/6jsCzMLZUD9jf2Wg6">San Borja, Lima</a>
                       <p class="info o-7">Presencial</p>
                       <p class="info o-7">Full Time</p>
+                      <a class="btn-descarga" target="_blank" href="doc/trabajo/banco-nacion.pdf">
+                        <span>
+                          <svg style="vertical-align: middle;" width="16" height="16" fill="white" viewBox="0 0 18 18">
+                              <path class="cls-1" d="m9,12.5l-4.38-4.38,1.23-1.27,2.27,2.27V2h1.75v7.13l2.27-2.27,1.23,1.27-4.38,4.38Zm-5.25,3.5c-.48,0-.89-.17-1.24-.51s-.51-.75-.51-1.24v-2.62h1.75v2.62h10.5v-2.62h1.75v2.62c0,.48-.17.89-.51,1.24s-.75.51-1.24.51H3.75Z"/>
+                        </svg>
+                      </span>
+                      </a>
                     </div>
                     <div class="item-circle">
                       <span class="circle" style="background-color: #047ae0;"></span>
@@ -630,7 +637,7 @@
             Certificados
           </div>
           <div class="sub-ctn-ambos">
-            <h2>Institución</h2>
+            <h2>Centros de Educación</h2>
             <div class="ctn-certificados">
               <!-- certificado Bachiller -->
               <a target="_blank" href="doc/cursos/certus-desarrollo-web-front-end.pdf" class="certificado-item">
