se edito la imagen

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
     <div class="ctn-menu">
       <div class="ctn-img-redes">
         <div class="ctn-menu-img">
-          <img src="img/miguel BN.jpg" alt="usuario"/>
+          <img src="img/miguel.jpg" alt="usuario"/>
           <div class="perfil-txt">Miguel Tapia Perez</div>
           <!-- <div class="perfil-txt">Front End Developer</div> -->
         </div>
